--- a/index.html
+++ b/index.html
@@ -19,133 +19,42 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>Subway Surfers</title>
-   <link rel="stylesheet" href="style.css" type="text/css">
-</head>
-
-<body>
-  <canvas id="glcanvas" width="1024" height="800"></canvas>
-
-  <div id="ModalBox" class="modal">
-    <div class="modal-content">
-      <div class="modal-header">
-        <p class='game_title'></p>
-        <p class="game_score" style="font-size: 20px";></p>
-        <div class="modal-footer" id="arrow" onmouseover="" style="cursor:pointer;"></div>
-        <p class="play_again" id="play_again" onmouseover="" style="font-size: 25px;cursor:pointer;margin-left: 29%;"></p>
-      </div>
-    </div>
-  </div>
-
-
-  <div id="GameScore" class="score">
-    <div class="score_content">
-      <div class="score_box">
-        <h1>Score</h2>
-          <h2 class="score_gain"></h2>
-      </div>
-    </div>
-  </div>
-
-</body>
-
-<script type="text/javascript">
-  var modal = document.getElementById('ModalBox');
-  var score = document.getElementById('GameScore');
-
-  var music;
-  music = new sound("assets/bgmusic.mp3");
-
-  function start() {
-    modal.style.display = "flex";
-    x = document.querySelector(".game_title");
-    x.textContent = "Subway Surfers";
-    y = document.querySelector(".play_again");
-    y.style.display = "none";
-  }
-
-  document.getElementById("arrow").addEventListener("click", start_box);
-  document.getElementById("play_again").addEventListener("click", restart_game);
-
-  function start_box() {
-    game_start = true;
-    music.play();
-    modal.style.display = "none";
-    score.style.display = "flex";
-  }
-
-  function restart_game() {
-    document.location.reload();
-  }
-
-  function update_score() {
-    x = document.querySelector(".score_gain");
-    x.textContent = objects[0].score;
-  }
-
-  function Game_over() {
-    modal.style.display = "flex";
-    score.style.display = "none";
-
-    x = document.querySelector(".game_title");
-    if(game_over)
-      x.textContent = "Game Over";
-    else if(finish)
-      x.textContent = "You Won!";
-
-    y = document.querySelector(".game_score");
-    y.textContent = "Your score: " + objects[0].score;
-    y.style.display = "flex";
-
-    z = document.querySelector(".modal-footer");
-    z.style.display = "none";
-
-    w = document.querySelector(".play_again");
-    w.style.display = "flex";
-    w.textContent = "Play Again"
-
-    music.stop();
-  }
-
-  function sound(src) {
-    this.sound = document.createElement("audio");
-    this.sound.src = src;
-    this.sound.setAttribute("preload", "auto");
-    this.sound.setAttribute("controls", "none");
-    this.sound.style.display = "none";
-    document.body.appendChild(this.sound);
-    this.play = function() {
-      this.sound.play();
-    }
-    this.stop = function() {
-      this.sound.pause();
-    }
-  }
-
-  start();
-
-</script>
-<script src="./libs/gl-matrix.js"></script>
-<script src="./libs/jquery-3.3.1.min.js"></script>
-<script src="./libs/webgl-utils.js"></script>
-
-<script src="./src/utility.js"></script>
-<script src="./src/camera.js"></script>
-<script src="./src/texture.js"></script>
-<script src="./src/finishline.js"></script>
-<script src="./src/boost.js"></script>
-<script src="./src/obstacle.js"></script>
-<script src="./src/barrier.js"></script>
-<script src="./src/coin.js"></script>
-<script src="./src/ground.js"></script>
-<script src="./src/track.js"></script>
-<script src="./src/police.js"></script>
-<script src="./src/player.js"></script>
-<script src="./src/wall.js"></script>
-<script src="./src/keyhandler.js"></script>
-<script src="./src/draw.js"></script>
-<script src="./src/main.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8" />
+	<script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/addons/p5.sound.min.js"></script>
+	<script src="mySketch.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
+<head>
+    <base href="https://cdn.jsdelivr.net/gh/genizy/google-class@cd06df26d3c4d9f73c8151fc13f7b2dc27f3adda/stickman-hook/">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    <style>
+      html,
+      body {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      margin: 0;
+      padding: 0;
+      border: 0;
+      overflow: hidden;
+      width: 100vw;
+      height: 100vh;
+      }
+      canvas {
+      width: 100%;
+      }
+    </style>
+    <script src="poki3.js"></script>
+  </head>
+  <body>
+    <script src="bundle.js"></script>
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"91be7a7b6dbe0904","version":"2025.1.0","r":1,"token":"0e8becf3a433401faa232e8c05dfd1f4","serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}}}' crossorigin="anonymous"></script>
+  </body>
+</html>
 
 </html>
 
